adding newsletter signup form to footer

--- a/css/common.css
+++ b/css/common.css
@@ -139,18 +139,18 @@ margin-right: 50px;
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
-    color: var(--text-color-darkgrey);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    color: var(--text-color-darkgrey);
+    transition: color var(--transition-time);
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
     color: var(--accent-color);
-    transition: color var(--transition-time);
 }
 
 .site-nav .link.current {
@@ -181,12 +181,13 @@ margin-right: 50px;
     align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
-    color: var(--text-color-grey);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    color: var(--text-color-grey);
+    transition: color var(--transition-time);
 }
 
 .contacts-list .contacts-list-item:not(:last-child) {
@@ -196,7 +197,6 @@ margin-right: 50px;
 .contacts-list .contacts-link:hover,
 .contacts-list .contacts-link:focus {
     color: var(--accent-color);
-    transition: color var(--transition-time);
 }
 
 .icon-email,
@@ -214,6 +214,7 @@ footer {
 footer .container {
     display: flex;
     align-items: baseline;
+    position: relative;
 }
 .address {
     margin-right: 70px;
@@ -240,19 +241,19 @@ address {
     margin-bottom: 0;
 }
 .ftr-contacts .address-link {
-    color: var(--ftr-address-contacts);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     text-decoration: none;
+    color: var(--ftr-address-contacts);
+    transition: color var(--transition-time);
 }
 
 .ftr-contacts .address-link:hover,
 .ftr-contacts .address-link:focus {
     color: var(--accent-color);
-    transition: color var(--transition-time);
 }
-.ftr-join .join {
+.join {
     margin-bottom: 20px;
     color: var(--primary-white);
     font-weight: 700;
@@ -272,15 +273,15 @@ address {
     justify-content: center;
     width: 44px;
     height: 44px;
+    border-radius: 50%;
     color: var(--primary-white);
     background-color: var(--footer-socials-bg);
-    border-radius: 50%;
+    transition: background-color var(--transition-time);
 }
 
 .ftr-socials-list .ftr-socials-item a:hover,
 .ftr-socials-list .ftr-socials-item a:focus {
     background-color: var(--accent-color);
-    transition: background-color var(--transition-time);
 }
 
 .ftr-socials-item .ftr-socials-icon {
@@ -288,4 +289,62 @@ address {
 }
 .ftr-socials-list .ftr-socials-item:not(:last-child) {
     margin-right: 10px;
+}
+/*----------NEWSLETTER SIGNUP FORM-----------*/
+.ftr-signup {
+    margin-left: auto;
+}
+.signup-data {
+    display: flex;
+    text-align: center;
+}
+.signup-email {
+    min-width: 358px;
+    height: 50px;
+    padding-left: 16px;
+    margin-right: 12px;
+    border: none;
+    border-radius: 4px;
+    color: rgba(255, 255, 255, 0.6);
+    background-color: transparent;
+    outline: 1px solid rgba(255, 255, 255, 0.3);
+    transition: outline var(--transition-time);
+}
+.signup-email::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+.signup-email:focus::-webkit-input-placeholder {
+    opacity: 0;
+}
+.signup-email:hover,
+.signup-email:focus {
+    outline: 1px solid var(--accent-color);
+}
+.signup-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:200px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    color: var(--primary-white);
+    background: var(--accent-color);
+    transition: color var(--transition-time), background-color var(--transition-time);
+}
+.icon-send {
+    margin-left: 10px;
+    fill: currentColor;
+}
+.signup-button:hover,
+.signup-button:focus {
+    color: var(--accent-color);
+    background-color: var(--primary-white);
 }
