--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,7 @@ transition: color var(--transition-time), background-color var(--transition-time
 .request-input {
     width: 100%;
     height: 40px;
+    padding-left:42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: 1px solid transparent;
@@ -390,11 +391,9 @@ transition: color var(--transition-time), background-color var(--transition-time
     fill: var(--text-color-darkgrey);
     transition: fill var(--transition-time);
 }
-.request-input:hover,
 .request-input:focus {
     outline: 1px solid var(--accent-color);
 }
-.request-input:hover+.request-form-icon,
 .request-input:focus+.request-form-icon {
     fill: var(--accent-color);
 }
@@ -423,11 +422,14 @@ transition: color var(--transition-time), background-color var(--transition-time
     color: rgba(117, 117, 117, 0.5);
 }
 .modal-field-policy {
+    margin-left:auto;
+    margin-right:auto;
     margin-bottom: 30px;
 }
 .request-policy {
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
